# NEO6-M-lib

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: NEO6.h  NEO6_M.h
src/: NEO6.c  NEO6_M.c  main.c
src/examples/: example_stm32f411.c  example_winapi.c
